feat: implemented basic search suggestions
